clusters/nookium/apps/media/qbittorrent/network-policy.yaml
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: vpn-namespace
  namespace: media
spec:
  podSelector: {}
  ingress:
    - from:
        # Only allow ingress from K8S
        - ipBlock:
            cidr: 172.20.0.0/20
  egress:
    - to:
        # Only allow egress to K8S
        - ipBlock:
            cidr: 172.20.0.0/20
  policyTypes:
    - Ingress
    - Egress
